# tools-impact-engine-allocate

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  DESIGN.md  PLAN.md  README.md  REVIEW.md  SPRINT.md  environment.yaml  pyproject.toml
.github/workflows/: docs.yaml
docs/source/: GUIDELINES.md  conf.py  index.md
docs/source/_static/: custom.css
docs/source/api/: index.md
docs/source/guides/: configuration.md  usage.md
docs/source/integration/: index.md
docs/source/solver/: index.md
docs/source/tutorial/: Tutorial.ipynb  Visualization.ipynb  index.md
impact_engine_allocate/: __init__.py  adapter.py  config.py  job_reader.py  models.py
impact_engine_allocate/allocation/: __init__.py  _common.py  _types.py  bayesian.py  minimax_regret.py
impact_engine_allocate/solver/: __init__.py  _common.py  _types.py  bayesian.py  minimax_regret.py
impact_engine_allocate/tests/: test_adapter.py  test_bayesian.py
portfolio_allocation/: __init__.py  adapter.py  solver.py
portfolio_allocation/solver/: __init__.py  _common.py  bayesian.py  minimax_regret.py
portfolio_allocation/tests/: conftest.py  test_adapter.py  test_bayesian.py  test_solver.py
tests/: __init__.py  test_adapter.py  test_allocate_facade.py  test_allocation.py  test_bayesian.py  test_config.py  test_job_reader.py  test_rule_registry.py  test_solver.py
tests/integration/: __init__.py
